manifests/istio/simple-routing/recommendation-virtual-service-v1.yml
# All users to recommendation:v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 100
---
